@@ -1,6 +1,12 @@
 
 TinyButStrong 1.8.0 beta
 
+2011-12-23, change-log:
+=======================
+
+- bug fix on f_Xml_GetPart()
+- new special field phpinfo
+
 2011-11-03, change-log:
 =======================
 
